--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@playwright/test": "^1.27.1",
     "@types/lodash": "^4.14.186",
     "@types/uuid": "^8.3.4",
     "http-proxy-middleware": "^2.0.6",
